<resources>
	<string name="app_name">MSensor</string>
	<string name="activity_name_sensorMonitor">Sensor Monitor Ver.0.1</string>
	<string name="activity_name_sensorList">Hal Sensor List Ver.1.0</string>
	<string name="class_SensorMonitor">.SensorMonitor</string>
	<string name="class_SensorList">.SensorList</string>

	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="sensor_name">Sensor name</string>
	<string name="sensor_delay">Sensor delay</string>
	<string name="sensor_data">Sensor data</string>
	<string name="sensor_start">START</string>
	<string name="sensor_stop">STOP</string>

	<string name="app_ver">0.1</string>
	<string name="ver_colon">Ver : </string>
	<string name="sensor_num_tag">Sensor Num : </string>
	<string name="sensor_num">0</string>
	<string name="str_senparam_vendor">Vendor</string>
	<string name="str_senparam_version">Version</string>
	<string name="str_senparam_type">Type</string>
	<string name="str_senparam_maxRange">MaxRange</string>
	<string name="str_senparam_resolution">Resolution</string>
	<string name="str_senparam_power">Power</string>
	<string name="str_senparam_minDelay">MinDelay</string>
	<string name="str_senparam_fifoReservedEventCount">FIFOReservedEventCount</string>
	<string name="str_senparam_fifoMaxEventCount">FIFOMaxEventCount</string>
	<string name="str_senparam_stringType">StringType</string>
	<string name="str_senparam_maxDelay">MaxDelay</string>
	<string name="str_senparam_reportingMode">ReportingMode</string>
	<string name="str_not_supp">Not Support</string>
</resources>
